@@ -67,7 +67,9 @@ import javax.xml.xpath.XPathExpression;
 import javax.xml.xpath.XPathExpressionException;
 import javax.xml.xpath.XPathFactory;
 import org.apache.commons.cli.CommandLine;
+import org.apache.commons.cli.DeprecatedAttributes;
 import org.apache.commons.cli.Option;
+import org.apache.commons.io.output.NullOutputStream;
 import org.apache.solr.client.api.util.SolrVersion;
 import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrServerException;
@@ -86,9 +88,8 @@ public class PostTool extends ToolBase {
   static final String DATA_MODE_FILES = "files";
   static final String DATA_MODE_ARGS = "args";
   static final String DATA_MODE_STDIN = "stdin";
-  static final String DEFAULT_DATA_MODE = DATA_MODE_FILES;
-  static final String FORMAT_SOLR = "solr";
   static final String DATA_MODE_WEB = "web";
+  static final String FORMAT_SOLR = "solr";
 
   private static final int DEFAULT_WEB_DELAY = 10;
   private static final int MAX_WEB_DEPTH = 10;
@@ -98,17 +99,17 @@ public class PostTool extends ToolBase {
   int recursive = 0;
   int delay = 0;
   String fileTypes = PostTool.DEFAULT_FILE_TYPES;
-  URL solrUpdateUrl;
+  URI solrUpdateUrl;
   String credentials;
   OutputStream out = null;
   String type;
   String format;
-  String mode = DEFAULT_DATA_MODE;
   boolean commit;
   boolean optimize;
   boolean dryRun; // Avoids actual network traffic to Solr
 
   String[] args;
+  String params;
 
   boolean auto = true;
   private int currentDepth;
@@ -172,70 +173,90 @@ public class PostTool extends ToolBase {
   public List<Option> getOptions() {
     return List.of(
         Option.builder("url")
-            .argName("url")
             .longOpt("solr-update-url")
             .hasArg()
-            .required(false)
+            .argName("UPDATEURL")
             .desc("Solr Update URL, the full url to the update handler, including the /update.")
             .build(),
         Option.builder("c")
             .longOpt("name")
-            .argName("NAME")
             .hasArg()
+            .argName("NAME")
             .required(false)
             .desc("Name of the collection.")
             .build(),
-        Option.builder("skipcommit")
+        Option.builder()
+            .longOpt("skip-commit")
             .required(false)
             .desc("Do not 'commit', and thus changes won't be visible till a commit occurs.")
             .build(),
-        Option.builder("optimize")
+        Option.builder()
+            .longOpt("skipcommit")
+            .deprecated(
+                DeprecatedAttributes.builder()
+                    .setForRemoval(true)
+                    .setSince("9.7")
+                    .setDescription("Use --skip-commit instead")
+                    .get())
+            .required(false)
+            .desc("Do not 'commit', and thus changes won't be visible till a commit occurs.")
+            .build(),
+        Option.builder("o")
+            .longOpt("optimize")
             .required(false)
             .desc("Issue an optimize at end of posting documents.")
             .build(),
-        Option.builder("mode")
+        Option.builder()
+            .longOpt("mode")
+            .hasArg()
             .argName("mode")
-            .hasArg(true)
             .required(false)
             .desc(
-                "Files crawls files, web crawls website, args processes input args, and stdin reads a command from standard in. default: files.")
+                "Which mode the Post tool is running in, 'files' crawls local directory, 'web' crawls website, 'args' processes input args, and 'stdin' reads a command from standard in. default: files.")
             .build(),
-        Option.builder("recursive")
+        Option.builder("r")
+            .longOpt("recursive")
+            .hasArg()
             .argName("recursive")
-            .hasArg(true)
             .required(false)
             .desc("For web crawl, how deep to go. default: 1")
             .build(),
-        Option.builder("delay")
+        Option.builder("d")
+            .longOpt("delay")
+            .hasArg()
             .argName("delay")
-            .hasArg(true)
             .required(false)
             .desc(
                 "If recursive then delay will be the wait time between posts.  default: 10 for web, 0 for files")
             .build(),
-        Option.builder("type")
+        Option.builder("t")
+            .longOpt("type")
+            .hasArg()
             .argName("content-type")
-            .hasArg(true)
             .required(false)
             .desc("Specify a specific mimetype to use, such as application/json.")
             .build(),
-        Option.builder("filetypes")
+        Option.builder("ft")
+            .longOpt("filetypes")
+            .hasArg()
             .argName("<type>[,<type>,...]")
-            .hasArg(true)
             .required(false)
             .desc("default: " + DEFAULT_FILE_TYPES)
             .build(),
-        Option.builder("params")
+        Option.builder("p")
+            .longOpt("params")
+            .hasArg()
             .argName("<key>=<value>[&<key>=<value>...]")
-            .hasArg(true)
             .required(false)
             .desc("values must be URL-encoded; these pass through to Solr update request.")
             .build(),
-        Option.builder("out")
+        Option.builder()
+            .longOpt("out")
             .required(false)
-            .desc("sends Solr response outputs to console")
+            .desc("sends Solr response outputs to console.")
             .build(),
-        Option.builder("format")
+        Option.builder("f")
+            .longOpt("format")
             .required(false)
             .desc(
                 "sends application/json content as Solr commands to /update instead of /update/json/docs.")
@@ -254,24 +275,20 @@ public class PostTool extends ToolBase {
     SolrCLI.raiseLogLevelUnlessVerbose(cli);
 
     solrUpdateUrl = null;
-    if (cli.hasOption("url")) {
-      String url = cli.getOptionValue("url");
-      solrUpdateUrl = new URL(url);
-    } else if (cli.hasOption("c")) {
-      String url = SolrCLI.getDefaultSolrUrl() + "/solr/" + cli.getOptionValue("c") + "/update";
-      solrUpdateUrl = new URL(url);
+    if (cli.hasOption("solr-update-url")) {
+      String url = cli.getOptionValue("solr-update-url");
+      solrUpdateUrl = new URI(url);
+    } else if (cli.hasOption("name")) {
+      String url = SolrCLI.getDefaultSolrUrl() + "/solr/" + cli.getOptionValue("name") + "/update";
+      solrUpdateUrl = new URI(url);
     } else {
       throw new IllegalArgumentException(
-          "Must specify either -url or -c parameter to post documents.");
+          "Must specify either --solr-update-url or -c parameter to post documents.");
     }
 
-    if (cli.hasOption("mode")) {
-      mode = cli.getOptionValue("mode");
-    }
+    String mode = cli.getOptionValue("mode", DATA_MODE_FILES);
 
-    if (cli.hasOption("dry-run")) {
-      dryRun = true;
-    }
+    dryRun = cli.hasOption("dry-run");
 
     if (cli.hasOption("type")) {
       type = cli.getOptionValue("type");
@@ -289,21 +306,23 @@ public class PostTool extends ToolBase {
     recursive = Integer.parseInt(cli.getOptionValue("recursive", "1"));
 
     out = cli.hasOption("out") ? CLIO.getOutStream() : null;
-    commit = cli.hasOption("skipcommit") ? false : true;
+    commit = !(cli.hasOption("skipcommit") || cli.hasOption("skip-commit"));
     optimize = cli.hasOption("optimize");
 
     credentials = cli.getOptionValue(SolrCLI.OPTION_CREDENTIALS.getLongOpt());
 
     args = cli.getArgs();
 
-    execute();
+    params = cli.getOptionValue("params", "");
+
+    execute(mode);
   }
 
   /**
    * After initialization, call execute to start the post job. This method delegates to the correct
    * mode method.
    */
-  public void execute() throws SolrServerException, IOException {
+  public void execute(String mode) throws SolrServerException, IOException {
     final RTimer timer = new RTimer();
     if (PostTool.DATA_MODE_FILES.equals(mode)) {
       doFilesMode();
@@ -317,11 +336,11 @@ public class PostTool extends ToolBase {
       return;
     }
 
-    if (commit) {
-      commit();
-    }
     if (optimize) {
+      // optimize does a commit under the covers.
       optimize();
+    } else if (commit) {
+      commit();
     }
     displayTiming((long) timer.getTime());
   }
@@ -360,38 +379,33 @@ public class PostTool extends ToolBase {
 
   private void doWebMode() {
     reset();
-    int numPagesPosted = 0;
-    try {
-      if (type != null) {
-        throw new IllegalArgumentException(
-            "Specifying content-type with \"-Ddata=web\" is not supported");
-      }
-
-      // Set Extracting handler as default
-      solrUpdateUrl = appendUrlPath(solrUpdateUrl, "/extract");
-
-      info("Posting web pages to Solr url " + solrUpdateUrl);
-      auto = true;
-      info(
-          "Entering auto mode. Indexing pages with content-types corresponding to file endings "
-              + fileTypes);
-      if (recursive > 0) {
-        if (recursive > MAX_WEB_DEPTH) {
-          recursive = MAX_WEB_DEPTH;
-          warn("Too large recursion depth for web mode, limiting to " + MAX_WEB_DEPTH + "...");
-        }
-        if (delay < DEFAULT_WEB_DELAY) {
-          warn(
-              "Never crawl an external web site faster than every 10 seconds, your IP will probably be blocked");
-        }
-        info("Entering recursive mode, depth=" + recursive + ", delay=" + delay + "s");
-      }
-      numPagesPosted = postWebPages(args, 0, out);
-      info(numPagesPosted + " web pages indexed.");
-
-    } catch (MalformedURLException e) {
-      warn("Wrong URL trying to append /extract to " + solrUpdateUrl);
+    int numPagesPosted;
+    if (type != null) {
+      throw new IllegalArgumentException(
+          "Specifying content-type with \"--mode=web\" is not supported");
     }
+
+    // Set Extracting handler as default
+    solrUpdateUrl = appendUrlPath(solrUpdateUrl, "/extract");
+
+    info("Posting web pages to Solr url " + solrUpdateUrl);
+    auto = true;
+    info(
+        "Entering auto mode. Indexing pages with content-types corresponding to file endings "
+            + fileTypes);
+    if (recursive > 0) {
+      if (recursive > MAX_WEB_DEPTH) {
+        recursive = MAX_WEB_DEPTH;
+        warn("Too large recursion depth for web mode, limiting to " + MAX_WEB_DEPTH + "...");
+      }
+      if (delay < DEFAULT_WEB_DELAY) {
+        warn(
+            "Never crawl an external web site faster than every 10 seconds, your IP will probably be blocked");
+      }
+      info("Entering recursive mode, depth=" + recursive + ", delay=" + delay + "s");
+    }
+    numPagesPosted = postWebPages(args, 0, out);
+    info(numPagesPosted + " web pages indexed.");
   }
 
   private void doStdinMode() {
@@ -443,7 +457,7 @@ public class PostTool extends ToolBase {
    * @param args array of file names
    * @param startIndexInArgs offset to start
    * @param out output stream to post data to
-   * @param type default content-type to use when posting (may be overridden in auto mode)
+   * @param type default content-type to use when posting (this may be overridden in auto mode)
    * @return number of files posted
    */
   public int postFiles(String[] args, int startIndexInArgs, OutputStream out, String type) {
@@ -515,7 +529,7 @@ public class PostTool extends ToolBase {
         postFile(srcFile, out, type);
         Thread.sleep(delay * 1000L);
         filesPosted++;
-      } catch (InterruptedException | MalformedURLException e) {
+      } catch (InterruptedException | MalformedURLException | URISyntaxException e) {
         throw new RuntimeException(e);
       }
     }
@@ -527,7 +541,7 @@ public class PostTool extends ToolBase {
    *
    * @param globFile file holding glob path
    * @param out outputStream to write results to
-   * @param type default content-type to use when posting (may be overridden in auto mode)
+   * @param type default content-type to use when posting (this may be overridden in auto mode)
    * @return number of files posted
    */
   int handleGlob(File globFile, OutputStream out, String type) {
@@ -623,8 +637,8 @@ public class PostTool extends ToolBase {
         PostTool.PageFetcherResult result = pageFetcher.readPageFromUrl(url);
         if (result.httpStatus == 200) {
           url = (result.redirectUrl != null) ? result.redirectUrl : url;
-          URL postUrl =
-              new URL(
+          URI postUri =
+              new URI(
                   appendParam(
                       solrUpdateUrl.toString(),
                       "literal.id="
@@ -638,7 +652,7 @@ public class PostTool extends ToolBase {
                   null,
                   out,
                   result.contentType,
-                  postUrl);
+                  postUri);
           if (success) {
             info("POSTed web resource " + url + " (depth: " + level + ")");
             Thread.sleep(delay * 1000L);
@@ -651,7 +665,7 @@ public class PostTool extends ToolBase {
                       new ByteArrayInputStream(
                           content.array(), content.arrayOffset(), content.limit()),
                       result.contentType,
-                      postUrl);
+                      postUri);
               subStack.addAll(children);
             }
           } else {
@@ -681,13 +695,14 @@ public class PostTool extends ToolBase {
    * @param link the absolute or relative link
    * @return the string version of the full URL
    */
-  protected String computeFullUrl(URL baseUrl, String link) {
+  protected static String computeFullUrl(URL baseUrl, String link)
+      throws MalformedURLException, URISyntaxException {
     if (link == null || link.length() == 0) {
       return null;
     }
     if (!link.startsWith("http")) {
       if (link.startsWith("/")) {
-        link = baseUrl.getProtocol() + "://" + baseUrl.getAuthority() + link;
+        link = baseUrl.toURI().resolve(link).toString();
       } else {
         if (link.contains(":")) {
           return null; // Skip non-relative URLs
@@ -697,10 +712,12 @@ public class PostTool extends ToolBase {
           int sep = path.lastIndexOf('/');
           String file = path.substring(sep + 1);
           if (file.contains(".") || file.contains("?")) {
-            path = path.substring(0, sep);
+            path = path.substring(0, sep + 1);
+          } else {
+            path = path + "/";
           }
         }
-        link = baseUrl.getProtocol() + "://" + baseUrl.getAuthority() + path + "/" + link;
+        link = baseUrl.toURI().resolve(path + link).toString();
       }
     }
     link = normalizeUrlEnding(link);
@@ -767,25 +784,32 @@ public class PostTool extends ToolBase {
    */
   public static String appendParam(String url, String param) {
     String[] pa = param.split("&");
+    StringBuilder urlBuilder = new StringBuilder(url);
     for (String p : pa) {
       if (p.trim().length() == 0) {
         continue;
       }
       String[] kv = p.split("=");
       if (kv.length == 2) {
-        url = url + (url.contains("?") ? "&" : "?") + kv[0] + "=" + kv[1];
+        urlBuilder
+            .append(urlBuilder.toString().contains("?") ? "&" : "?")
+            .append(kv[0])
+            .append("=")
+            .append(kv[1]);
       } else {
         warn("Skipping param " + p + " which is not on form key=value");
       }
     }
+    url = urlBuilder.toString();
     return url;
   }
 
   /** Opens the file and posts its contents to the solrUrl, writes to response to output. */
-  public void postFile(File file, OutputStream output, String type) throws MalformedURLException {
+  public void postFile(File file, OutputStream output, String type)
+      throws MalformedURLException, URISyntaxException {
     InputStream is = null;
 
-    URL url = solrUpdateUrl;
+    URI uri = solrUpdateUrl;
     String suffix = "";
     if (auto) {
       if (type == null) {
@@ -797,7 +821,7 @@ public class PostTool extends ToolBase {
       if (type.equals("application/json") && !PostTool.FORMAT_SOLR.equals(format)) {
         suffix = "/json/docs";
         String urlStr = appendUrlPath(solrUpdateUrl, suffix).toString();
-        url = new URL(urlStr);
+        uri = new URI(urlStr);
       } else if (type.equals("application/xml")
           || type.equals("text/csv")
           || type.equals("application/json")) {
@@ -815,7 +839,7 @@ public class PostTool extends ToolBase {
           urlStr =
               appendParam(urlStr, "literal.id=" + URLEncoder.encode(file.getAbsolutePath(), UTF_8));
         }
-        url = new URL(urlStr);
+        uri = new URI(urlStr);
       }
     } else {
       if (type == null) {
@@ -838,7 +862,7 @@ public class PostTool extends ToolBase {
                 + " to [base]"
                 + suffix);
         is = new FileInputStream(file);
-        postData(is, file.length(), output, type, url);
+        postData(is, file.length(), output, type, uri);
       } catch (IOException e) {
         warn("Can't open/read file: " + file);
       } finally {
@@ -856,18 +880,24 @@ public class PostTool extends ToolBase {
   /**
    * Appends to the path of the URL
    *
-   * @param url the URL
+   * @param uri the URI
    * @param append the path to append
    * @return the final URL version
    */
-  protected static URL appendUrlPath(URL url, String append) throws MalformedURLException {
-    return new URL(
-        url.getProtocol()
-            + "://"
-            + url.getAuthority()
-            + url.getPath()
-            + append
-            + (url.getQuery() != null ? "?" + url.getQuery() : ""));
+  protected static URI appendUrlPath(URI uri, String append) {
+    if (append == null || append.isEmpty()) {
+      return uri;
+    }
+    if (append.startsWith("/")) {
+      append = append.substring(1);
+    }
+    if (uri.getQuery() != null && !uri.getQuery().isEmpty()) {
+      append += "?" + uri.getQuery();
+    }
+    if (!uri.getPath().endsWith("/")) {
+      append = uri.getPath() + "/" + append;
+    }
+    return uri.resolve(append);
   }
 
   /**
@@ -890,9 +920,17 @@ public class PostTool extends ToolBase {
    * @return true if success
    */
   public boolean postData(
-      InputStream data, Long length, OutputStream output, String type, URL url) {
+      InputStream data, Long length, OutputStream output, String type, URI uri) {
     if (dryRun) {
       return true;
+    }
+
+    if (params.length() > 0) {
+      try {
+        uri = new URI(appendParam(uri.toString(), params));
+      } catch (URISyntaxException e) {
+        warn("Malformed params");
+      }
     }
 
     boolean success = true;
@@ -902,7 +940,7 @@ public class PostTool extends ToolBase {
     HttpURLConnection urlConnection = null;
     try {
       try {
-        urlConnection = (HttpURLConnection) url.openConnection();
+        urlConnection = (HttpURLConnection) (uri.toURL()).openConnection();
         try {
           urlConnection.setRequestMethod("POST");
         } catch (ProtocolException e) {
@@ -1027,16 +1065,12 @@ public class PostTool extends ToolBase {
    * source and thrown away.
    */
   private static void pipe(InputStream source, OutputStream dest) throws IOException {
-    byte[] buf = new byte[1024];
-    int read = 0;
-    while ((read = source.read(buf)) >= 0) {
-      if (null != dest) {
-        dest.write(buf, 0, read);
-      }
+    if (dest == null) {
+      dest = NullOutputStream.INSTANCE;
     }
-    if (null != dest) {
-      dest.flush();
-    }
+    // copy source to dest
+    source.transferTo(dest);
+    dest.flush();
   }
 
   public FileFilter getFileFilterFromFileTypes(String fileTypes) {
@@ -1088,8 +1122,7 @@ public class PostTool extends ToolBase {
   public static Document makeDom(byte[] in)
       throws SAXException, IOException, ParserConfigurationException {
     InputStream is = new ByteArrayInputStream(in);
-    Document dom = DocumentBuilderFactory.newInstance().newDocumentBuilder().parse(is);
-    return dom;
+    return DocumentBuilderFactory.newInstance().newDocumentBuilder().parse(is);
   }
 
   /** Inner class to filter files based on glob wildcards */
@@ -1200,9 +1233,9 @@ public class PostTool extends ToolBase {
         disallows = new ArrayList<>();
         URL urlRobot;
         try {
-          urlRobot = new URL(strRobot);
+          urlRobot = new URI(strRobot).toURL();
           disallows = parseRobotsTxt(urlRobot.openStream());
-        } catch (MalformedURLException e) {
+        } catch (URISyntaxException | MalformedURLException e) {
           return true; // We cannot trust this robots URL, should not happen
         } catch (IOException e) {
           // There is no robots.txt, will cache an empty disallow list
@@ -1250,17 +1283,16 @@ public class PostTool extends ToolBase {
      * @param url the URL of the web page
      * @param is the input stream of the page
      * @param type the content-type
-     * @param postUrl the URL (typically /solr/extract) in order to pull out links
+     * @param postUri the URI (typically /solr/extract) in order to pull out links
      * @return a set of URIs parsed from the page
      */
-    protected Set<URI> getLinksFromWebPage(URL url, InputStream is, String type, URL postUrl) {
+    protected Set<URI> getLinksFromWebPage(URL url, InputStream is, String type, URI postUri) {
       Set<URI> linksFromPage = new HashSet<>();
 
       try {
         ByteArrayOutputStream os = new ByteArrayOutputStream();
-        URL extractUrl = new URL(appendParam(postUrl.toString(), "extractOnly=true"));
-        extractUrl = new URL(appendParam(extractUrl.toString(), "wt=xml"));
-        boolean success = postData(is, null, os, type, extractUrl);
+        URI extractUri = new URI(appendParam(postUri.toString(), "extractOnly=true"));
+        boolean success = postData(is, null, os, type, extractUri);
         if (success) {
           Document d = makeDom(os.toByteArray());
           String innerXml = getXP(d, "/response/str/text()[1]", false);
@@ -1279,7 +1311,7 @@ public class PostTool extends ToolBase {
             }
           }
         }
-      } catch (MalformedURLException e) {
+      } catch (URISyntaxException e) {
         warn("Malformed URL " + url);
       } catch (IOException e) {
         warn("IOException opening URL " + url + ": " + e.getMessage());
